--- a/_posts/2014-04-10-nog-18-dagen.md
+++ b/_posts/2014-04-10-nog-18-dagen.md
@@ -8,7 +8,7 @@ share: true
 published: true
 ---
 
-Mijn bachelor is ondertussen op één vak na afgerond, en ik heb bijna mijn hele paklijst bij elkaar verzameld. De talencursus, inentingen en afterparty zijn geregeld, dus ik ben er helemaal klaar voor. 
+Mijn bachelor is ondertussen op één vak na afgerond, en ik heb bijna mijn hele paklijst bij elkaar verzameld. De talencursus, inentingen en afscheidsparty zijn geregeld, dus ik ben er helemaal klaar voor. 
 
 <!--more-->
 
