--- a/_posts/2014-05-06-quito.md
+++ b/_posts/2014-05-06-quito.md
@@ -26,48 +26,36 @@ Uit voornamelijk de Nederlanders en Belgen (en Nemer de Palestijn) is een enorm 
 <figure class="half">
 	<a href="{{ site.url }}/images/Quito/foto-1.JPG"><img src="{{ site.url }}/images/Quito/foto-1.JPG"></a>
 	<a href="{{ site.url }}/images/Quito/foto-2.jpg"><img src="{{ site.url }}/images/Quito/foto-2.jpg"></a>
-	<figcaption>Wat een lifestyle. Ik was vergeten te vertellen dat er verder alleen Nederlandse dames zijn.</figcaption>
+	<figcaption>Wat een lifestyle.</figcaption>
 </figure>
 
-
-
-### Two Up
-
-Apply the `half` class like so to display two images side by side that share the same caption.
-
-
-
-And you'll get something that looks like this:
-
-<figure class="half">
-	<a href="{{ site.url }}/images/gallery1/photo (6).jpg"><img src="{{ site.url }}/images/gallery1/photo (5).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (12).jpg"><img src="{{ site.url }}/images/gallery1/photo (11).jpg"></a>
-	<img src="{{ site.url }}/images/gallery1/photo (13).jpg"></a>
-	<img src="{{ site.url }}/images/gallery1/photo (19).jpg"></a>
-	<figcaption>Two images.</figcaption>
-</figure>
-
-### Three Up
-
-Apply the `third` class like so to display three images side by side that share the same caption.
-
-{% highlight html %}
-<figure class="third">
-	<a href="http://placehold.it/1200x600.jpg"><img src="http://placehold.it/600x300.jpg"></a>
-	<a href="http://placehold.it/1200x600.jpg"><img src="http://placehold.it/600x300.jpg"></a>
-	<a href="http://placehold.it/1200x600.jpg"><img src="http://placehold.it/600x300.jpg"></a>
-	<figcaption>Caption describing these three images.</figcaption>
-</figure>
-{% endhighlight %}
-
-And you'll get something that looks like this:
+Ik heb wel al wat meer foto's gemaakt van de omgeving maar ik vergeet iets te vaak dat ik mijn camera bij me heb.
 
 <figure class="third">
-	<a href="{{ site.url }}/images/gallery1/photo (22).jpg"><img src="{{ site.url }}/images/gallery1/photo (21).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (24).jpg"><img src="{{ site.url }}/images/gallery1/photo (23).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (74).jpg"><img src="{{ site.url }}/images/gallery1/photo (73).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (4).jpg"><img src="{{ site.url }}/images/gallery1/photo (3).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (18).jpg"><img src="{{ site.url }}/images/gallery1/photo (17).jpg"></a>
-	<a href="{{ site.url }}/images/gallery1/photo (10).jpg"><img src="{{ site.url }}/images/gallery1/photo (9).jpg"></a>
-	<figcaption>Three images.</figcaption>
+<a href="{{ site.url }}/images/Quito/img_0032.JPG"><img src="{{ site.url }}/images/Quito/img_0032.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0042.JPG"><img src="{{ site.url }}/images/Quito/img_0042.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0059.JPG"><img src="{{ site.url }}/images/Quito/img_0059.JPG"></a>
+    <figcaption>Quito</figcaption>
 </figure>
+
+Eergisteren zijn we naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht.
+
+<figure class="third">
+<a href="{{ site.url }}/images/Quito/img_0068.JPG"><img src="{{ site.url }}/images/Quito/img_0068.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0069.JPG"><img src="{{ site.url }}/images/Quito/img_0069.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0075.JPG"><img src="{{ site.url }}/images/Quito/img_0075.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0081.JPG"><img src="{{ site.url }}/images/Quito/img_0081.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0087.JPG"><img src="{{ site.url }}/images/Quito/img_0087.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0099.JPG"><img src="{{ site.url }}/images/Quito/img_0099.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0102.JPG"><img src="{{ site.url }}/images/Quito/img_0102.JPG"></a>
+		<figcaption>Historisch Centrum</figcaption>
+</figure>
+
+Gisteren ontbeten bij een Nederlandse bakker (och och, nog geen week weg en alweer boterhammen willen).
+
+<figure>
+<a href="{{ site.url }}/images/Quito/img_0104.JPG"><img src="{{ site.url }}/images/Quito/img_0104.JPG"></a>
+<figcaption>Dit is dus blijkbaar een Nederlands ontbijt.</figcaption>
+</figure>
+
+Spaans is vanaf vandaag begonnen, met z'n 3en in een klasje is heel relaxed. Volgende week dinsdagavond vertrek ik als het goed is naar Canoa dus ik hoop dat ik voor die tijd een fatsoenlijke Spaanse zin kan bouwen. Ik ben vanmiddag met Rolf de Zwitserse boswachter die ook Spaans doet op zoek gegaan naar een schrift en we kwamen terug met een stapel losse blaadjes dus dat is op zich al heel wat. 
