--- a/_posts/2014-05-06-quito.md
+++ b/_posts/2014-05-06-quito.md
@@ -17,11 +17,12 @@ Klein weekje in Quito en ik vraag me af of ik uberhaupt nog door ga reizen.
 Niet dat ik tot nu toe veel meer gedaan heb dan in een aantal parken op het gras/bankjes/muurtjes zitten, beetje rondlopen en biertjes drinken, maar het stikt hier van de leuke mensen. Hier in het huis zitten voornamelijk Nederlanders, Belgen en Duitsers, dus dat is precies wat je wil. 
 
 <figure>
-	<a href="{{ site.url }}/images/Quito/IMG_0039.JPG"><img src="{{ site.url }}/images/Quito/IMG_0039.JPG"></a>
+	<a href="{{ site.url }}/images/Quito/img_0039.JPG"><img src="{{ site.url }}/images/Quito/img_0039.JPG"></a>
 	<figcaption>Woont hier ook.</figcaption>
 </figure>
 
-Uit voornamelijk de Nederlanders en Belgen (en Nemer de Palestijn) is een enorm fijn stap-, eet- en activiteitenteam ontstaan. 
+Uit voornamelijk de Nederlanders en Belgen (en Nemer de Palestijn) is een enorm fijn stap-, eet- en activiteitenteam ontstaan. Ik heb wel geprobeerd meer foto's te maken maar ik vergeet iets te vaak dat ik mijn camera bij me heb. Eergisteren zijn we naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht. Wel een paar lelijke foto's gemaakt onderweg. Het weer lijkt ook niet zo heel erg super maar hoewel het bewolkt is is het 's middags vaak wel heel warm. 
+
 
 <figure class="half">
 	<a href="{{ site.url }}/images/Quito/foto-1.JPG"><img src="{{ site.url }}/images/Quito/foto-1.JPG"></a>
@@ -29,33 +30,28 @@ Uit voornamelijk de Nederlanders en Belgen (en Nemer de Palestijn) is een enorm 
 	<figcaption>Wat een lifestyle.</figcaption>
 </figure>
 
-Ik heb wel al wat meer foto's gemaakt van de omgeving maar ik vergeet iets te vaak dat ik mijn camera bij me heb.
-
 <figure class="third">
-<a href="{{ site.url }}/images/Quito/img_0032.JPG"><img src="{{ site.url }}/images/Quito/img_0032.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0042.JPG"><img src="{{ site.url }}/images/Quito/img_0042.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0059.JPG"><img src="{{ site.url }}/images/Quito/img_0059.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0032.jpg"><img src="{{ site.url }}/images/Quito/img_0032.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0042.jpg"><img src="{{ site.url }}/images/Quito/img_0042.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0059.jpg"><img src="{{ site.url }}/images/Quito/img_0059.jpg"></a>
     <figcaption>Quito</figcaption>
 </figure>
 
-Eergisteren zijn we naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht.
-
 <figure class="third">
-<a href="{{ site.url }}/images/Quito/img_0068.JPG"><img src="{{ site.url }}/images/Quito/img_0068.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0069.JPG"><img src="{{ site.url }}/images/Quito/img_0069.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0075.JPG"><img src="{{ site.url }}/images/Quito/img_0075.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0081.JPG"><img src="{{ site.url }}/images/Quito/img_0081.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0087.JPG"><img src="{{ site.url }}/images/Quito/img_0087.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0099.JPG"><img src="{{ site.url }}/images/Quito/img_0099.JPG"></a>
-<a href="{{ site.url }}/images/Quito/img_0102.JPG"><img src="{{ site.url }}/images/Quito/img_0102.JPG"></a>
+<a href="{{ site.url }}/images/Quito/img_0068.jpg"><img src="{{ site.url }}/images/Quito/img_0068.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0069.jpg"><img src="{{ site.url }}/images/Quito/img_0069.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0075.jpg"><img src="{{ site.url }}/images/Quito/img_0075.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0081.jpg"><img src="{{ site.url }}/images/Quito/img_0081.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0087.jpg"><img src="{{ site.url }}/images/Quito/img_0087.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0099.jpg"><img src="{{ site.url }}/images/Quito/img_0099.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0102.jpg"><img src="{{ site.url }}/images/Quito/img_0102.jpg"></a>
 		<figcaption>Historisch Centrum</figcaption>
 </figure>
 
-Gisteren ontbeten bij een Nederlandse bakker (och och, nog geen week weg en alweer boterhammen willen).
-
 <figure>
-<a href="{{ site.url }}/images/Quito/img_0104.JPG"><img src="{{ site.url }}/images/Quito/img_0104.JPG"></a>
-<figcaption>Dit is dus blijkbaar een Nederlands ontbijt.</figcaption>
+<a href="{{ site.url }}/images/Quito/img_0104.jpg"><img src="{{ site.url }}/images/Quito/img_0104.jpg"></a>
+<figcaption>Gisteren hebben we ontbeten bij een Nederlandse bakker (och och, nog geen week weg en alweer boterhammen willen). 
+ Dit is dus blijkbaar een typisch Nederlands ontbijt.</figcaption>
 </figure>
 
 Spaans is vanaf vandaag begonnen, met z'n 3en in een klasje is heel relaxed. Volgende week dinsdagavond vertrek ik als het goed is naar Canoa dus ik hoop dat ik voor die tijd een fatsoenlijke Spaanse zin kan bouwen. Ik ben vanmiddag met Rolf de Zwitserse boswachter die ook Spaans doet op zoek gegaan naar een schrift en we kwamen terug met een stapel losse blaadjes dus dat is op zich al heel wat. 
