--- a/_posts/2014-05-06-quito.md
+++ b/_posts/2014-05-06-quito.md
@@ -3,55 +3,53 @@ layout: post
 title: "Muy Bueno!"
 description: "Si!"
 category: Ecuador
-tags: [Quito, Old Town]
+tags: [Quito, Old Town, Bueno, Lego]
 image: 
-  feature: IMG_0069.JPG
+  feature: rsz_img_0059.jpg
 comments: true
 share: true
 ---
 
-Klein weekje in Quito en ik vraag me af of ik uberhaupt nog door ga reizen.
+Weekje in Quito en ik vraag me af of ik uberhaupt nog door ga reizen.
 
 <!--more--> 
 
-Niet dat ik tot nu toe veel meer gedaan heb dan in een aantal parken op het gras/bankjes/muurtjes zitten, beetje rondlopen en biertjes drinken, maar het stikt hier van de leuke mensen. Hier in het huis zitten voornamelijk Nederlanders, Belgen en Duitsers, dus dat is precies wat je wil. 
+_Ik ben echt al 3 dagen geleden begonnen met schrijven van dit verhaal dus er missen hier en daar wat stukjes, maar het geeft wel mooi aan dat ik helemaal in het Ecuadoriaanse tempo leef hier._
 
-<figure>
-	<a href="{{ site.url }}/images/Quito/img_0039.JPG"><img src="{{ site.url }}/images/Quito/img_0039.JPG"></a>
-	<figcaption>Woont hier ook.</figcaption>
-</figure>
+Niet dat ik tot nu toe veel meer gedaan heb dan in een aantal parken op het gras/bankjes/muurtjes zitten, beetje rondlopen en biertjes drinken, maar ik vermaak me prima met het vervelen van mensen in het hostel. Het is zelfs sociaal geaccepteerd om lebensraum-grappen tegen Duitsers te maken (zij begonnen).
 
-Uit voornamelijk de Nederlanders en Belgen (en Nemer de Palestijn) is een enorm fijn stap-, eet- en activiteitenteam ontstaan. Ik heb wel geprobeerd meer foto's te maken maar ik vergeet iets te vaak dat ik mijn camera bij me heb. Eergisteren zijn we naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht. Wel een paar lelijke foto's gemaakt onderweg. Het weer lijkt ook niet zo heel erg super maar hoewel het bewolkt is is het 's middags vaak wel heel warm. 
-
+Uit voornamelijk de Nederlanders, Belgen en Nemer de Palestijn is een enorm fijn stap-, eet- en activiteitenteam ontstaan. Ik heb wel geprobeerd meer foto's te maken maar ik vergeet iets te vaak dat ik mijn camera bij me heb. We naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht. Wel een paar lelijke foto's gemaakt onderweg. Het weer lijkt ook niet zo heel erg super maar hoewel het bewolkt is is het 's middags vaak wel heel warm. 
 
 <figure class="half">
-	<a href="{{ site.url }}/images/Quito/foto-1.JPG"><img src="{{ site.url }}/images/Quito/foto-1.JPG"></a>
+	<a href="{{ site.url }}/images/Quito/foto-1.jpg"><img src="{{ site.url }}/images/Quito/foto-1.jpg"></a>
 	<a href="{{ site.url }}/images/Quito/foto-2.jpg"><img src="{{ site.url }}/images/Quito/foto-2.jpg"></a>
 	<figcaption>Wat een lifestyle.</figcaption>
 </figure>
 
-<figure class="third">
+<figure class="half">
 <a href="{{ site.url }}/images/Quito/img_0032.jpg"><img src="{{ site.url }}/images/Quito/img_0032.jpg"></a>
 <a href="{{ site.url }}/images/Quito/img_0042.jpg"><img src="{{ site.url }}/images/Quito/img_0042.jpg"></a>
 <a href="{{ site.url }}/images/Quito/img_0059.jpg"><img src="{{ site.url }}/images/Quito/img_0059.jpg"></a>
+<a href="{{ site.url }}/images/Quito/img_0068.jpg"><img src="{{ site.url }}/images/Quito/img_0068.jpg"></a>
     <figcaption>Quito</figcaption>
 </figure>
 
-<figure class="third">
-<a href="{{ site.url }}/images/Quito/img_0068.jpg"><img src="{{ site.url }}/images/Quito/img_0068.jpg"></a>
-<a href="{{ site.url }}/images/Quito/img_0069.jpg"><img src="{{ site.url }}/images/Quito/img_0069.jpg"></a>
+<figure class="half">
 <a href="{{ site.url }}/images/Quito/img_0075.jpg"><img src="{{ site.url }}/images/Quito/img_0075.jpg"></a>
-<a href="{{ site.url }}/images/Quito/img_0081.jpg"><img src="{{ site.url }}/images/Quito/img_0081.jpg"></a>
 <a href="{{ site.url }}/images/Quito/img_0087.jpg"><img src="{{ site.url }}/images/Quito/img_0087.jpg"></a>
 <a href="{{ site.url }}/images/Quito/img_0099.jpg"><img src="{{ site.url }}/images/Quito/img_0099.jpg"></a>
 <a href="{{ site.url }}/images/Quito/img_0102.jpg"><img src="{{ site.url }}/images/Quito/img_0102.jpg"></a>
 		<figcaption>Historisch Centrum</figcaption>
 </figure>
 
+Spaans is vanaf maandag begonnen, met z'n 3en in een klasje is heel relaxed. Volgende week dinsdagavond vertrek ik naar Canoa dus ik hoop dat ik voor die tijd een fatsoenlijke Spaanse zin kan bouwen. Het wordt wel met de dag zwaarder want Martín gaat als een raket door de stof heen en iedere dag is er een groter feestje dus ook een groter katertje. Iedere woensdag is ladies' night, wat ze wel heel goed bekeken hebben hier. De mannen mogen boven wachten terwijl de dames beneden van 8 tot 10 gratis drinken. Na die twee uur mogen de arme betalende mannen de trap af het veld in, en dan is het aan. Gelukkig valt het qua kosten allemaal enorm mee hier; een Cuba Libre kost ongeveer $3,50 en doen de verhoudingen verkeerd om, dus het ziet eruit als ice tea en als je er te veel drinkt op een avond word je waarschijnlijk blind.
+
+We zouden vandaag eigenlijk op excursie gaan, maar omdat het moeilijk hard regende zat dat er niet echt in. Er zitten trouwens ook meerdere gaten in het dak kwamen we achter, maar het regent precies tussen de bedden in dus niks aan de hand. Wat wel aan de hand is is dat het gas op is, en niemand dus meer warm kan douchen (ik ben inmiddels verhuisd dus helaas geen elektrische douche meer). Dat is best shit, maar ze zijn het op zijn Ecuadoriaans aan het repareren dus het zal over een week of 2 wel opgelost zijn. 
+
+Verder is er niet bijzonder veel te melden vanuit hier. Spaans gaat duidelijk beter naarmate er meer cervezas in zitten, hoewel de meeste mensen ook wel een beetje Engels praten en het stikt van de toeristen. Ik ben terwijl ik dit typ op zoek naar tickets richting Galápagos (weblog-ontwijkend-gedrag?), dus dat gaat binnenkort ook gebeuren. Gisteren heb ik een uur salsales gehad en ik kan het nog steeds niet. Buenoooo.
+
 <figure>
 <a href="{{ site.url }}/images/Quito/img_0104.jpg"><img src="{{ site.url }}/images/Quito/img_0104.jpg"></a>
-<figcaption>Gisteren hebben we ontbeten bij een Nederlandse bakker (och och, nog geen week weg en alweer boterhammen willen). 
+<figcaption>Zondag hebben we ontbeten bij een Nederlandse bakker (och och, nog geen week weg en alweer boterhammen willen). 
  Dit is dus blijkbaar een typisch Nederlands ontbijt.</figcaption>
 </figure>
-
-Spaans is vanaf vandaag begonnen, met z'n 3en in een klasje is heel relaxed. Volgende week dinsdagavond vertrek ik als het goed is naar Canoa dus ik hoop dat ik voor die tijd een fatsoenlijke Spaanse zin kan bouwen. Ik ben vanmiddag met Rolf de Zwitserse boswachter die ook Spaans doet op zoek gegaan naar een schrift en we kwamen terug met een stapel losse blaadjes dus dat is op zich al heel wat. 
