--- a/_posts/2014-05-08-quito-1.md
+++ b/_posts/2014-05-08-quito-1.md
@@ -3,11 +3,16 @@ layout: post
 title: "Muy Bueno!"
 description: "Si!"
 category: Ecuador
-tags: [Quito, Old Town, Bueno, Lego]
+tags: 
+  - Quito
+  - Old Town
+  - Bueno
+  - Lego
 image: 
   feature: rsz_img_0059.jpg
 comments: true
 share: true
+published: true
 ---
 
 Weekje in Quito en ik vraag me af of ik uberhaupt nog door ga reizen.
@@ -20,8 +25,7 @@ Niet dat ik tot nu toe veel meer gedaan heb dan in een aantal parken op het gras
 
 Uit voornamelijk de Nederlanders, Belgen en Nemer de Palestijn is een enorm fijn stap-, eet- en activiteitenteam ontstaan. Ik heb wel geprobeerd meer foto's te maken maar ik vergeet iets te vaak dat ik mijn camera bij me heb. We naar het historisch centrum gelopen, dat was heel gaaf maar na een uur of anderhalf bergop en -af lopen was iedereen stuk en hebben we maar een taxi terug gezocht. Wel een paar lelijke foto's gemaakt onderweg. Het weer lijkt ook niet zo heel erg super maar hoewel het bewolkt is is het 's middags vaak wel heel warm. 
 
-<figure class="half">
-	<a href="{{ site.url }}/images/Quito/foto-1.jpg"><img src="{{ site.url }}/images/Quito/foto-1.jpg"></a>
+<figure>
 	<a href="{{ site.url }}/images/Quito/foto-2.jpg"><img src="{{ site.url }}/images/Quito/foto-2.jpg"></a>
 	<figcaption>Wat een lifestyle.</figcaption>
 </figure>
