--- a/_posts/2014-07-18-china-1.md
+++ b/_posts/2014-07-18-china-1.md
@@ -44,7 +44,7 @@ De volgende dag zijn we met de tram door het business district op Hong Kong isla
 <figcaption>Sunset vanaf Victoria Peak</figcaption>
 </figure>
 
-Om het met-stokjes-eten te oefenen zijn we maar street food gaan eten; de tafel werd afgeladen met bakjes vol met kip, garnalen, krab, vis, bief, rijst en vegetables (een klein bakje paksoi vinden ze hier 'vegetables'). De ratten liepen ondertussen gewoon tussen de (tuin)tafels op straat door. Het eten was wel heel lekker! In Nederland zou je zo'n keuken alleen in een iets aantrekkelijkere omgeving verwachten.
+Om het met-stokjes-eten te oefenen zijn we street food gaan eten; de tafel werd afgeladen met bakjes vol met kip, garnalen, krab, vis, bief, rijst en vegetables (een klein bakje paksoi vinden ze hier 'vegetables'). De ratten liepen ondertussen gewoon tussen de (tuin)tafels op straat door. Het eten was wel heel lekker! In Nederland zou je zo'n keuken alleen in een iets aantrekkelijkere omgeving verwachten.
 
 <figure>
 <a href="{{ site.url }}/images/China/IMG_1418.JPG"><img src="{{ site.url }}/images/China/thumbs/IMG_1418.JPG"></a>
@@ -153,7 +153,7 @@ Op de laatste dag in Yangshuo hebben we eerst een rondje door oude tempels gewan
 <figcaption>Kookworkshop</figcaption>
 </figure>
 
-De dag daarna zijn we al vroeg richting Longji Titian gereden. Daar hebben we een aantal dagen vooral vanwege de hitte niet zo heel veel gedaan behalve rondgewandeld tussen de rijstvelden en familiefoto's gemaakt.
+De volgende ochtend zijn we al vroeg richting Longji Titian gereden. Daar hebben we een aantal dagen vooral vanwege de hitte niet zo heel veel gedaan behalve rondgewandeld tussen de rijstvelden en familiefoto's gemaakt.
 
 <figure class="half">
 <a href="{{ site.url }}/images/China/G0340931.JPG"><img src="{{ site.url }}/images/China/thumbs/G0340931.JPG"></a>
@@ -165,4 +165,4 @@ De dag daarna zijn we al vroeg richting Longji Titian gereden. Daar hebben we ee
 
 We zijn inmiddels via Kunming in Dali in de regen beland, maar dat is voor het volgende verhaal.
 
-Het is van achter de Great Firewall vrij lastig om op Facebook te komen, maar ik probeer wel regelmatig iets op Instagram achter te laten.
+Het is van achter de Great Firewall vrij lastig om op Facebook te komen, dus ik probeer regelmatig iets op Instagram achter te laten.
