--- a/_posts/2014-07-27-china-2.md
+++ b/_posts/2014-07-27-china-2.md
@@ -85,7 +85,7 @@ Waar ze in Dali helaas niet goed in zijn, is het runnen van hotels. Wat overal e
 <figcaption>Verder in Dali: Kabelbaan met mooi uitzicht, BBQen op straat, rijstkorrels met een persoonlijke boodschap en kettingzagen in je garage</figcaption>
 </figure>
 
-Door de soepele communicatie van het hotel wisten we ook niet precies waar of wanneer we een bus naar Lijiang moesten hebben. We wisten dat het ergens tussen 10 en half 11 's ochtends zou gebeuren dus vanaf de straathoek bij de all-day-breakfast hebben we de deuren van het hotel goed in de gaten gehouden. Rond half 11 verscheen er een vrouwtje met een 5-persoons busje dat duidelijk erg gestresst raakte toen we met z'n 7en buiten stonden. De 'grote' bus naar Lijiang vertrok om half 11 vanaf het lokale busstation dus de stress was wederzijds. Nadat ze een ander mannetje met een taxi had gebeld en we dus allemaal vervoerd konden worden hebben ze ons op de vluchtstrook van de snelweg neergezet, waar wonder boven wonder 5 minuten later de grote bus langskwam. Die stopte netjes midden op de snelweg zodat we spullen in konden laden en alsnog mee naar Lijiang konden.
+Door de soepele communicatie van het hotel wisten we ook niet precies waar of wanneer we een bus naar Lijiang moesten hebben. We wisten dat het ergens tussen 10 en half 11 's ochtends zou gebeuren dus vanaf de straathoek bij de all-day-breakfast hebben we de deuren van het hotel goed in de gaten gehouden. Rond half 11 verscheen er een vrouwtje met een 5-persoons busje dat duidelijk erg gestresst raakte toen we met z'n 7en buiten stonden. De 'grote' bus naar Lijiang vertrok om half 11 vanaf het lokale busstation dus de stress was wederzijds. Nadat ze een ander mannetje met een taxi had gebeld en we dus allemaal vervoerd konden worden, hebben ze ons op de vluchtstrook van de snelweg neergezet, waar wonder boven wonder 5 minuten later de grote bus langskwam. Die stopte netjes midden op de snelweg zodat we spullen in konden laden en alsnog mee naar Lijiang konden.
 
 <figure>
 <a href="{{ site.url }}/images/China/2/IMG_4756.JPG"><img src="{{ site.url }}/images/China/2/thumbs/IMG_4756.JPG"></a>
